syntax = "proto3";
package com.protocolos.planner;
option java_multiple_files = true;

message GetWeatherRequest {
    string city = 1;
}

message Weather {
    string city = 1;
    string weather = 2;
}

service WeatherService {
    rpc getWeather(GetWeatherRequest) returns (Weather);
}
